fix search-team page text-alignment issue

--- a/src/pages/search-match/search-match.scss
+++ b/src/pages/search-match/search-match.scss
@@ -1,6 +1,15 @@
 page-search-match{
   .search-match-container{
     height: 100%;
+
+    .search-march-item{
+      .item-inner{
+        padding: 0;
+        ion-label{
+          margin:0;
+        }
+      }
+    }
   }
   .no-match-wrapper{
     width: 100%;
